--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
     <script>
         new Vue ({
             el: "#app",
+            data: {
+                message: "hello world"
+            },
             methods: {
                 reverseMessage: function() {
-                    
+                    this.message = this.message.split('').reverse().join('')
                 }
             }
         })
