--- a/index.html
+++ b/index.html
@@ -6,15 +6,17 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="app"></div>
-    <button v-on:click=reverseMessage>反転</button>
-
+    <script src="vue.js"></script>
+    <div id="app">
+        <p>{{message}}</p>
+        <button v-on:click="reverseMessage">反転</button>
+    </div>
 
     <script>
         new Vue ({
             el: "#app",
             data: {
-                message: "hello world"
+                message: "helloworld"
             },
             methods: {
                 reverseMessage: function() {
