--- a/index.html
+++ b/index.html
@@ -8,51 +8,25 @@
 <body>
     <script src="vue.js"></script>
     <div id="app">
-        <p>{{number}}回クリック</p>
-        <p>{{number2}}回クリック</p>
-        <button v-on:click="plus">クリック</button>
-        <button v-on:click="plus2">クリック2</button>
-        <p>{{ changeMessage }}</p>
-        <p>{{ changeMessageMethod() }}</p>
-        <p v-on:mousemove="change">aaaaaaaaaaaaaa
-            <span v-on:mousemove.stop>jjjjjjjjjjjjjjjjjj</span>
-        </p>
-        <p>x:{{x}} y:{{y}}</p>
-        <input type="text" @keydown.enter="myAlert">
+        <button @click="change(1)">クリック1</button>
+        <button @click="change(2)">クリック2</button>
+        <div v-bind:class="{ active: isActive }">afaaaaaaaaaaa</div>
     </div>
 
     <script>
         new Vue ({
             el: "#app",
             data: {
-                number: 0,
-                number2: 0,
-                x: 0,
-                y: 0,
+                return {
+                    isActive: {
+                        1:{backgroundcolor: "red"},
+                        2:{backgroundcolor: "blue"},
+                    },
+                },
             },
-            methods: {
-                plus: function() {
-                    this.number = this.number + 1
-                },
-                plus2: function() {
-                    this.number2 = this.number2 + 1
-                },
-                change: function(event) {
-                    this.x = event.clientX;
-                    this.y = event.clientY;
-                },
-                myAlert: function () {
-                    alert("アラート");
-                },
-                changeMessageMethod: function () {
-                    console.log("method");
-                    return this.number >= 3 ? "3以上" : "3以下"
-                }
-            },
-            computed: {
-                changeMessage: function() {
-                    console.log("computed");
-                    return this.number >= 3 ? "3以上" : "3以下"
+            method: {
+                change: function(n) {
+                    this.isActive = this.isActive
                 }
             }
         })
